--- a/examples/infer.ipynb
+++ b/examples/infer.ipynb
@@ -20,13 +20,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
     "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import os\n",
     "\n",
     "workers = 0 if os.name == 'nt' else 4"
    ]
@@ -118,7 +119,10 @@
     "def collate_fn(x):\n",
     "    return x[0]\n",
     "\n",
-    "dataset = datasets.ImageFolder('../data/test_images')\n",
+    "root_dir = Path(__file__).parent.parent\n",
+    "data_dir = root_dir / \"tests\" / \"data\" / \"test_images\"\n",
+    "\n",
+    "dataset = datasets.ImageFolder(data_dir)\n",
     "dataset.idx_to_class = {i:c for c, i in dataset.class_to_idx.items()}\n",
     "loader = DataLoader(dataset, collate_fn=collate_fn, num_workers=workers)"
    ]
