--- a/examples/lfw_evaluate_cn.ipynb
+++ b/examples/lfw_evaluate_cn.ipynb
@@ -146,7 +146,7 @@
     "box_probs = []\n",
     "\n",
     "for i, (x, b_paths) in enumerate(loader):\n",
-    "    crops = [p.replace(data_dir, data_dir + '_cropped') for p in b_paths]\n",
+    "    crops = [p.replace(str(data_dir), str(data_dir.parent / (data_dir.name + \"_aligned\"))) for p in b_paths]\n",
     "    mtcnn(x, save_path=crops)\n",
     "    crop_paths.extend(crops)\n",
     "    print('\\r第 {} 批，共 {} 批'.format(i + 1, len(loader)), end='')"
@@ -185,7 +185,7 @@
     "    fixed_image_standardization\n",
     "])\n",
     "\n",
-    "dataset = datasets.ImageFolder(data_dir + '_cropped', transform=trans)\n",
+    "dataset = datasets.ImageFolder(data_dir.parent / data_dir.name + \"_aligned\", transform=trans)\n",
     "\n",
     "embed_loader = DataLoader(\n",
     "    dataset,\n",
@@ -454,7 +454,7 @@
    "outputs": [],
    "source": [
     "pairs = read_pairs(pairs_path)\n",
-    "path_list, issame_list = get_paths(data_dir+'_cropped', pairs)\n",
+    "path_list, issame_list = get_paths(data_dir+'_aligned', pairs)\n",
     "embeddings = np.array([embeddings_dict[path] for path in path_list])\n",
     "\n",
     "tpr, fpr, accuracy, val, val_std, far, fp, fn = evaluate(embeddings, issame_list)"
@@ -490,8 +490,7 @@
    ],
    "source": [
     "print(accuracy)\n",
-    "np.mean(accuracy)\n",
-    "\n"
+    "np.mean(accuracy)"
    ]
   }
  ],
