--- a/examples/finetune.ipynb
+++ b/examples/finetune.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "from facenet_pytorch import MTCNN, InceptionResnetV1, fixed_image_standardization, training\n",
     "import torch\n",
     "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
@@ -41,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = '../data/test_images'\n",
+    "root_dir = Path(__file__).parent.parent\n",
+    "data_dir = root_dir / \"tests\" / \"data\" / \"test_images\"\n",
     "\n",
     "batch_size = 32\n",
     "epochs = 8\n",
@@ -106,10 +108,10 @@
    "source": [
     "dataset = datasets.ImageFolder(data_dir, transform=transforms.Resize((512, 512)))\n",
     "dataset.samples = [\n",
-    "    (p, p.replace(data_dir, data_dir + '_cropped'))\n",
+    "    (p, p.replace(str(data_dir), str(data_dir.parent / (data_dir.name + \"_aligned\"))))\n",
     "        for p, _ in dataset.samples\n",
     "]\n",
-    "        \n",
+    "\n",
     "loader = DataLoader(\n",
     "    dataset,\n",
     "    num_workers=workers,\n",
@@ -117,8 +119,8 @@
     "    collate_fn=training.collate_pil\n",
     ")\n",
     "\n",
-    "for i, (x, y) in enumerate(loader):\n",
-    "    mtcnn(x, save_path=y)\n",
+    "for i, (input_file, output_file) in enumerate(loader):\n",
+    "    mtcnn(input_file, save_path=output_file)\n",
     "    print('\\rBatch {} of {}'.format(i + 1, len(loader)), end='')\n",
     "    \n",
     "# Remove mtcnn to reduce GPU memory usage\n",
@@ -168,7 +170,7 @@
     "    transforms.ToTensor(),\n",
     "    fixed_image_standardization\n",
     "])\n",
-    "dataset = datasets.ImageFolder(data_dir + '_cropped', transform=trans)\n",
+    "dataset = datasets.ImageFolder(data_dir.parent / (data_dir.name + \"_aligned\"), transform=trans)\n",
     "img_inds = np.arange(len(dataset))\n",
     "np.random.shuffle(img_inds)\n",
     "train_inds = img_inds[:int(0.8 * len(img_inds))]\n",
