--- a/examples/finetune.ipynb
+++ b/examples/finetune.ipynb
@@ -11,9 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:48.430736Z",
+     "start_time": "2024-06-26T13:36:47.177280Z"
+    }
+   },
    "source": [
     "from pathlib import Path\n",
     "from facenet_pytorch import MTCNN, InceptionResnetV1, fixed_image_standardization, training\n",
@@ -25,7 +28,9 @@
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
     "import os"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -38,34 +43,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:48.435108Z",
+     "start_time": "2024-06-26T13:36:48.432058Z"
+    }
+   },
    "source": [
-    "root_dir = Path(__file__).parent.parent\n",
+    "root_dir = Path(Path(__file__).parent if \"__file__\" in globals() else \"\").absolute().parent\n",
     "data_dir = root_dir / \"tests\" / \"data\" / \"test_images\"\n",
     "\n",
     "batch_size = 32\n",
     "epochs = 8\n",
-    "workers = 0 if os.name == 'nt' else 8"
-   ]
+    "workers = 0 if os.name == \"nt\" else 8"
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Determine if an nvidia GPU is available"
-   ]
+   "source": "#### Determine if a nvidia GPU is available"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:48.475713Z",
+     "start_time": "2024-06-26T13:36:48.436118Z"
+    }
+   },
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "print('Running on device: {}'.format(device))"
-   ]
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Running on device: {device}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on device: cuda:0\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -78,16 +99,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:48.542246Z",
+     "start_time": "2024-06-26T13:36:48.476687Z"
+    }
+   },
    "source": [
     "mtcnn = MTCNN(\n",
     "    image_size=160, margin=0, min_face_size=20,\n",
     "    thresholds=[0.6, 0.7, 0.7], factor=0.709, post_process=True,\n",
     "    device=device\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -100,11 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:49.190250Z",
+     "start_time": "2024-06-26T13:36:48.543304Z"
+    }
    },
-   "outputs": [],
    "source": [
     "dataset = datasets.ImageFolder(data_dir, transform=transforms.Resize((512, 512)))\n",
     "dataset.samples = [\n",
@@ -121,11 +149,21 @@
     "\n",
     "for i, (input_file, output_file) in enumerate(loader):\n",
     "    mtcnn(input_file, save_path=output_file)\n",
-    "    print('\\rBatch {} of {}'.format(i + 1, len(loader)), end='')\n",
+    "    print(f\"\\rBatch {i+1} of {len(loader)}\", end=\"\")\n",
     "    \n",
     "# Remove mtcnn to reduce GPU memory usage\n",
     "del mtcnn"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch 1 of 1"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -138,16 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:49.419045Z",
+     "start_time": "2024-06-26T13:36:49.190986Z"
+    }
+   },
    "source": [
     "resnet = InceptionResnetV1(\n",
     "    classify=True,\n",
-    "    pretrained='vggface2',\n",
+    "    pretrained=\"vggface2\",\n",
     "    num_classes=len(dataset.class_to_idx)\n",
     ").to(device)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -158,9 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:49.424395Z",
+     "start_time": "2024-06-26T13:36:49.420108Z"
+    }
+   },
    "source": [
     "optimizer = optim.Adam(resnet.parameters(), lr=0.001)\n",
     "scheduler = MultiStepLR(optimizer, [5, 10])\n",
@@ -188,7 +234,9 @@
     "    batch_size=batch_size,\n",
     "    sampler=SubsetRandomSampler(val_inds)\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -199,16 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:49.434817Z",
+     "start_time": "2024-06-26T13:36:49.425067Z"
+    }
+   },
    "source": [
     "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "metrics = {\n",
-    "    'fps': training.BatchTimer(),\n",
-    "    'acc': training.accuracy\n",
+    "    \"fps\": training.BatchTimer(),\n",
+    "    \"acc\": training.accuracy\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -219,15 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-26T13:36:52.659888Z",
+     "start_time": "2024-06-26T13:36:49.435520Z"
+    }
+   },
    "source": [
     "writer = SummaryWriter()\n",
     "writer.iteration, writer.interval = 0, 10\n",
     "\n",
-    "print('\\n\\nInitial')\n",
-    "print('-' * 10)\n",
+    "print(\"\\n\\nInitial\")\n",
+    "print(\"-\" * 10)\n",
     "resnet.eval()\n",
     "training.pass_epoch(\n",
     "    resnet, loss_fn, val_loader,\n",
@@ -236,8 +292,8 @@
     ")\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    print('\\nEpoch {}/{}'.format(epoch + 1, epochs))\n",
-    "    print('-' * 10)\n",
+    "    print(f\"\\nEpoch {epoch + 1}/{epochs}\")\n",
+    "    print(\"-\" * 10)\n",
     "\n",
     "    resnet.train()\n",
     "    training.pass_epoch(\n",
@@ -254,7 +310,61 @@
     "    )\n",
     "\n",
     "writer.close()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Initial\n",
+      "----------\n",
+      "Valid |     1/1    | loss:    1.1656 | fps:    8.5033 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 1/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    1.4932 | fps:   23.3235 | acc:    0.2500   \n",
+      "Valid |     1/1    | loss:    0.8389 | fps:   13.2477 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 2/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.1318 | fps:   44.1008 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    0.8094 | fps:   11.5341 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 3/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0131 | fps:   47.5829 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    1.0491 | fps:   11.4941 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 4/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0045 | fps:   43.7946 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    1.5456 | fps:   10.8716 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 5/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0023 | fps:   43.7726 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    2.1608 | fps:   10.1123 | acc:    0.5000   \n",
+      "\n",
+      "Epoch 6/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0025 | fps:   43.3672 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    0.0950 | fps:   11.4269 | acc:    1.0000   \n",
+      "\n",
+      "Epoch 7/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0017 | fps:   45.7846 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    0.0052 | fps:   11.9142 | acc:    1.0000   \n",
+      "\n",
+      "Epoch 8/8\n",
+      "----------\n",
+      "Train |     1/1    | loss:    0.0018 | fps:   49.0223 | acc:    1.0000   \n",
+      "Valid |     1/1    | loss:    0.0014 | fps:   11.8008 | acc:    1.0000   \n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
