--- a/examples/infer.ipynb
+++ b/examples/infer.ipynb
@@ -15,51 +15,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "from pathlib import Path\n",
-    "import os\n",
-    "\n",
     "from facenet_pytorch import MTCNN, InceptionResnetV1\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision import datasets\n",
     "import pandas as pd\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "workers = 0 if os.name == 'nt' else 4"
+    "workers = 0 if os.name == \"nt\" else 4"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Determine if an nvidia GPU is available"
-   ]
+   "cell_type": "markdown",
+   "source": "#### Determine if an nvidia GPU is available"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on device: cuda:0\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "print('Running on device: {}'.format(device))"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"Running on device: {}\".format(device))"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "#### Define MTCNN module\n",
     "\n",
@@ -69,10 +58,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "mtcnn = MTCNN(\n",
     "    image_size=160, margin=0, min_face_size=20,\n",
@@ -82,8 +71,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "#### Define Inception Resnet V1 module\n",
     "\n",
@@ -93,17 +82,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": [
-    "resnet = InceptionResnetV1(pretrained='vggface2').eval().to(device)"
-   ]
+   "execution_count": null,
+   "source": "resnet = InceptionResnetV1(pretrained=\"vggface2\").eval().to(device)"
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "#### Define a dataset and data loader\n",
     "\n",
@@ -111,25 +98,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "def collate_fn(x):\n",
     "    return x[0]\n",
     "\n",
-    "root_dir = Path(__file__).parent.parent\n",
-    "data_dir = root_dir / \"tests\" / \"data\" / \"test_images\"\n",
-    "\n",
-    "dataset = datasets.ImageFolder(data_dir)\n",
+    "root_dir = Path(Path(__file__).parent if \"__file__\" in globals() else \"\").absolute().parent\n",
+    "dataset = datasets.ImageFolder(root_dir / \"tests\" / \"data\" / \"test_images\")\n",
     "dataset.idx_to_class = {i:c for c, i in dataset.class_to_idx.items()}\n",
     "loader = DataLoader(dataset, collate_fn=collate_fn, num_workers=workers)"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "#### Perfom MTCNN facial detection\n",
     "\n",
@@ -139,29 +124,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Face detected with probability: 0.999957\n",
-      "Face detected with probability: 0.999927\n",
-      "Face detected with probability: 0.999662\n",
-      "Face detected with probability: 0.999873\n",
-      "Face detected with probability: 0.999991\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "aligned = []\n",
     "names = []\n",
     "for x, y in loader:\n",
-    "    x_aligned, prob = mtcnn(x, return_prob=True)\n",
+    "    x_aligned, prob = mtcnn(x)\n",
     "    if x_aligned is not None:\n",
-    "        print('Face detected with probability: {:8f}'.format(prob))\n",
+    "        print(f\"Face detected with probability: {prob:8f}\")\n",
     "        aligned.append(x_aligned)\n",
     "        names.append(dataset.idx_to_class[y])"
    ]
