--- a/examples/lfw_evaluate_cn.ipynb
+++ b/examples/lfw_evaluate_cn.ipynb
@@ -23,12 +23,13 @@
    },
    "outputs": [],
    "source": [
-    "from facenet_pytorch import MTCNN, InceptionResnetV1, fixed_image_standardization, training, extract_face\n",
+    "from facenet_pytorch import MTCNN, InceptionResnetV1, fixed_image_standardization, training\n",
     "import torch\n",
-    "from torch.utils.data import DataLoader, SubsetRandomSampler, SequentialSampler\n",
+    "from torch.utils.data import DataLoader, SequentialSampler\n",
     "from torchvision import datasets, transforms\n",
     "import numpy as np\n",
-    "import os"
+    "import os\n",
+    "import math"
    ]
   },
   {
@@ -45,12 +46,12 @@
    },
    "outputs": [],
    "source": [
-    "data_dir = 'data/lfw/lfw'\n",
-    "pairs_path = 'data/lfw/pairs.txt'\n",
+    "data_dir = \"data/lfw/lfw\"\n",
+    "pairs_path = \"data/lfw/pairs.txt\"\n",
     "\n",
     "batch_size = 16\n",
     "epochs = 15\n",
-    "workers = 0 if os.name == 'nt' else 8"
+    "workers = 0 if os.name == \"nt\" else 8"
    ]
   },
   {
@@ -75,8 +76,8 @@
     }
    ],
    "source": [
-    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "print('在该设备上运行: {}'.format(device))"
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(\"在该设备上运行: {}\".format(device))"
    ]
   },
   {
@@ -93,7 +94,7 @@
     "    image_size=160,\n",
     "    margin=14,\n",
     "    device=device,\n",
-    "    selection_method='center_weighted_size'\n",
+    "    selection_method=\"center_weighted_size\"\n",
     ")"
    ]
   },
@@ -149,7 +150,7 @@
     "    crops = [p.replace(str(data_dir), str(data_dir.parent / (data_dir.name + \"_aligned\"))) for p in b_paths]\n",
     "    mtcnn(x, save_path=crops)\n",
     "    crop_paths.extend(crops)\n",
-    "    print('\\r第 {} 批，共 {} 批'.format(i + 1, len(loader)), end='')"
+    "    print(\"\\r第 {} 批，共 {} 批\".format(i + 1, len(loader)), end=\"\")"
    ]
   },
   {
@@ -208,7 +209,7 @@
     "# 加载预训练的Resnet模型\n",
     "resnet = InceptionResnetV1(\n",
     "    classify=False,\n",
-    "    pretrained='vggface2'\n",
+    "    pretrained=\"vggface2\"\n",
     ").to(device)"
    ]
   },
@@ -229,7 +230,7 @@
     "    for xb, yb in embed_loader:\n",
     "        xb = xb.to(device)\n",
     "        b_embeddings = resnet(xb)\n",
-    "        b_embeddings = b_embeddings.to('cpu').numpy()\n",
+    "        b_embeddings = b_embeddings.to(\"cpu\").numpy()\n",
     "        classes.extend(yb.numpy())\n",
     "        embeddings.extend(b_embeddings)"
    ]
@@ -285,7 +286,7 @@
     "        similarity = dot / norm\n",
     "        dist = np.arccos(similarity) / math.pi\n",
     "    else:\n",
-    "        raise 'Undefined distance metric %d' % distance_metric\n",
+    "        raise \"Undefined distance metric %d\" % distance_metric\n",
     "\n",
     "    return dist\n",
     "\n",
@@ -367,7 +368,7 @@
     "        for threshold_idx, threshold in enumerate(thresholds):\n",
     "            _, far_train[threshold_idx] = calculate_val_far(threshold, dist[train_set], actual_issame[train_set])\n",
     "        if np.max(far_train)>=far_target:\n",
-    "            f = interpolate.interp1d(far_train, thresholds, kind='slinear')\n",
+    "            f = interpolate.interp1d(far_train, thresholds, kind=\"slinear\")\n",
     "            threshold = f(far_target)\n",
     "        else:\n",
     "            threshold = 0.0\n",
@@ -404,12 +405,12 @@
     "    return tpr, fpr, accuracy, val, val_std, far, fp, fn\n",
     "\n",
     "def add_extension(path):\n",
-    "    if os.path.exists(path+'.jpg'):\n",
-    "        return path+'.jpg'\n",
-    "    elif os.path.exists(path+'.png'):\n",
-    "        return path+'.png'\n",
+    "    if os.path.exists(path+\".jpg\"):\n",
+    "        return path+\".jpg\"\n",
+    "    elif os.path.exists(path+\".png\"):\n",
+    "        return path+\".png\"\n",
     "    else:\n",
-    "        raise RuntimeError('No file \"%s\" with extension png or jpg.' % path)\n",
+    "        raise RuntimeError(\"No file \\\"%s\\\" with extension png or jpg.\" % path)\n",
     "\n",
     "def get_paths(lfw_dir, pairs):\n",
     "    nrof_skipped_pairs = 0\n",
@@ -417,12 +418,12 @@
     "    issame_list = []\n",
     "    for pair in pairs:\n",
     "        if len(pair) == 3:\n",
-    "            path0 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + '_' + '%04d' % int(pair[1])))\n",
-    "            path1 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + '_' + '%04d' % int(pair[2])))\n",
+    "            path0 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + \"_\" + \"%04d\" % int(pair[1])))\n",
+    "            path1 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + \"_\" + \"%04d\" % int(pair[2])))\n",
     "            issame = True\n",
     "        elif len(pair) == 4:\n",
-    "            path0 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + '_' + '%04d' % int(pair[1])))\n",
-    "            path1 = add_extension(os.path.join(lfw_dir, pair[2], pair[2] + '_' + '%04d' % int(pair[3])))\n",
+    "            path0 = add_extension(os.path.join(lfw_dir, pair[0], pair[0] + \"_\" + \"%04d\" % int(pair[1])))\n",
+    "            path1 = add_extension(os.path.join(lfw_dir, pair[2], pair[2] + \"_\" + \"%04d\" % int(pair[3])))\n",
     "            issame = False\n",
     "        if os.path.exists(path0) and os.path.exists(path1):    # 仅在两个路径都存在时添加配对\n",
     "            path_list += (path0,path1)\n",
@@ -430,13 +431,13 @@
     "        else:\n",
     "            nrof_skipped_pairs += 1\n",
     "    if nrof_skipped_pairs>0:\n",
-    "        print('跳过 %d 个图像对' % nrof_skipped_pairs)\n",
+    "        print(\"跳过 %d 个图像对\" % nrof_skipped_pairs)\n",
     "\n",
     "    return path_list, issame_list\n",
     "\n",
     "def read_pairs(pairs_filename):\n",
     "    pairs = []\n",
-    "    with open(pairs_filename, 'r') as f:\n",
+    "    with open(pairs_filename, \"r\") as f:\n",
     "        for line in f.readlines()[1:]:\n",
     "            pair = line.strip().split()\n",
     "            pairs.append(pair)\n",
@@ -454,7 +455,7 @@
    "outputs": [],
    "source": [
     "pairs = read_pairs(pairs_path)\n",
-    "path_list, issame_list = get_paths(data_dir+'_aligned', pairs)\n",
+    "path_list, issame_list = get_paths(data_dir+\"_aligned\", pairs)\n",
     "embeddings = np.array([embeddings_dict[path] for path in path_list])\n",
     "\n",
     "tpr, fpr, accuracy, val, val_std, far, fp, fn = evaluate(embeddings, issame_list)"
